--- a/hydro-x.Rmd
+++ b/hydro-x.Rmd
@@ -23,11 +23,75 @@ library(knitr)
 opts_chunk$set(#fig.width=10, fig.height=6, #fig.path='Figs/',
                cache=T,
                echo=F, warning=F, message=F)
+
+## Other libraries
+library(tidyverse)
+library(lubridate)
+library(forcats)
+# library(DT)
+library(cowplot) 
+library(hrbrthemes)
+library(extrafont)
+library(grid)
+library(scales)
+library(RColorBrewer)
+#library(plotly)
+library(leaflet)
+library(maps)
+
+## Month order from Summer to Winter (useful for plots)
+month_ord <- 
+  c("May", "Jun", "Jul", "Aug", "Sep", "Oct",
+    "Nov", "Dec", "Jan", "Feb", "Mar", "Apr")
+
+## For plots
+font_type <- 
+  choose_font(
+    c("Yanone Kaffeesatz", "CM Sans", "Lato")[1]
+    )
+
+font_size <- 20
+strip_size <- 20
+ax_size <- 18
+cap_size <- 15
+theme_set(
+  theme_ipsum(
+    base_family = font_type,
+    plot_margin = margin(10, 10, 10, 10),
+    base_size = font_size,
+    plot_title_size = font_size,
+    strip_text_size = strip_size,
+    axis_title_size = ax_size,
+    caption_size = cap_size
+    )
+)
+
+if(font_type == "CM Sans"){
+  font_size <- 18
+  strip_size <- 15
+  ax_size <- 15
+  cap_size <- 12
+  theme_set(
+    theme_cowplot() +
+      theme(
+        text = element_text(family = font_type, size = font_size),
+        axis.text = element_text(family = font_type, size = ax_size),
+        plot.title = element_text(size = font_size),
+        plot.caption=element_text(margin = margin(t = 15),
+                                  face = "italic", size = cap_size),
+        strip.text = element_text(size = strip_size),
+        strip.background = element_rect(colour = "white", fill = "white"),
+        panel.spacing = unit(1, "lines") ## Increase gap between facet panels
+        )
+    )
+}
+
 ```
+
 
 ## Econ 101: Market power
 
-- Dominant firms will withhold production and raise prices. 
+- Dominant firms raise prices by withholding production. 
 
 --
 count: false
@@ -59,8 +123,8 @@ count: false
 --
 count: false
 - **Research questions:**
-  1. Do theoretical predictions match up with the data? 
-  2. Economic significance in this market?
+  1. Does theory match up with the data? 
+  2. Welfare effects in this market?
   3. Are there environmental consequences?
 
 ---
@@ -71,10 +135,10 @@ count: false
 - I exploit quasi-experimental variation in the Nordic electricity market. (Source: Transmission constraints.)
 - Provides a rare setting in which the **definition** of the market is changing over time.
 - I pair this exogenous variation with firm-level data on Norwegian hydropower plants and electricity flows.
-- Identify the *causal* impact of market power on firm behaviour
+- Identify the *causal* impact of market power on firm behaviour.
 - **Research questions:**
-  1. Do theoretical predictions match up with the data? (**Yes**)
-  2. Economic significance in this market? (**Modest, but...**)
+  1. Does theory match up with the data? (**Yes**)
+  2. Welfare effects in this market? (**Modest, but...**)
   3. Are there environmental consequences? (**Yes**)
 
 ---
@@ -86,52 +150,7 @@ class: inverse, center, middle
 
 ## Hydropower is important
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
-library(tidyverse)
-library(ggplot2)
-library(cowplot) ## For easier, publication-ready formatting of ggplot output
-library(extrafont)
-library(grid)
-library(scales)
-library(extrafont)
-library(RColorBrewer)
-#library(plotly)
-
-# - Hydropower is the foremost source of non-fossil fuel energy.
-#     + 7% of global primary energy suppy
-#     + 16% of global electricity generation
-# - In countries like Norway, Brazil and Canada, hydropower is even more dominant.
-
-## For plots
-font_type <- 
-  choose_font(
-    c("Lato", "Yanone Kaffeesatz", "Droid Serif", "CM Sans")[4]
-    )
-
-font_size <- 20
-strip_size <- 20
-ax_size <- 18
-cap_size <- 15
-if(font_type == "CM Sans"){
-    font_size <- 18
-    strip_size <- 15
-    ax_size <- 15
-    cap_size <- 12
-}
-
-theme_set(
-  theme_cowplot() + 
-    theme(
-    text = element_text(family = font_type, size = font_size),
-    axis.text = element_text(family = font_type, size = ax_size),
-    plot.title = element_text(size = font_size),
-    plot.caption=element_text(margin = margin(t = 15),
-                              face = "italic", size = cap_size),
-    strip.background = element_rect(colour = "white", fill = "white"),
-    panel.spacing = unit(1, "lines") ## Increase gap between facet panels
-    )
-)
-
+```{r primary_energy, echo=FALSE, message=FALSE, warning=FALSE}
 type <- c("Oil", "Coal", "Gas", "Hydro", "Nuclear", "Other")
 tpes <- c(32.6, 30.0, 23.7, 6.8, 4.4, 2.5) ## BP Statistical Review (2015): Year = 2014
 elec <- c(5.0, 40.4, 22.5, 16.2, 10.9, 5.0)
@@ -164,21 +183,12 @@ energy %>%
   labs(x = NULL, y = NULL,
        caption = "\n Source: BP (2016)") + 
   facet_wrap(~ form_labs, scales = "free_x") +
-  # theme(legend.position = "none",
-  #       text = element_text(family = font_type),
-  #       axis.text = element_text(family = font_type, size = ax_size),
-  #       axis.text.x = element_text(angle = 45, vjust = 0.95, hjust = 1.01),
-  #       strip.text = element_text(size = strip_size),
-  #       strip.background = element_rect(fill = "white"), ## Facet strip
-  #       panel.spacing = unit(4, "lines") ## Increase gap between facet panels
-  #       )
   theme(
     legend.position = "none",
-    text = element_text(family = font_type),
+    # text = element_text(family = font_type),
     axis.text.x = element_text(angle = 45, vjust = 0.95, hjust = 1.01),
-    # plot.caption=element_text(margin = margin(t = 15), face = "italic"),
-    strip.text = element_text(size = strip_size),
-    strip.background = element_rect(fill = "white"), ## Facet strip
+    # strip.text = element_text(size = strip_size),
+    # strip.background = element_rect(fill = "white"), ## Facet strip
     panel.spacing = unit(4, "lines") ## Increase gap between facet panels
     )
 
@@ -221,17 +231,6 @@ energy %>%
 - Don't need to impose any structure on the data or models, nor do I require simulation and MC estimation.
 - I find direct evidence of strategic, intertemporal firm behaviour over longer periods of time.
 
-<!-- 
-
-## Literature (cont.)
-
-- Electricity markets are a popular topic in empirical I/O.
-
-> "Energy markets have been so attractive to me in part because they are relatively simple: in many cases just commodity markets, though often with firms that are large enough to behave strategically. That’s not to say there aren’t some complexities, but **there is much less of the product differentiation, reputation, advertising, branding, and related issues that come up in many other industries**. I would argue that this is where the application of the core IO ideas is most straightforward." <span style="color:#0c5999">Borenstein (2016)</span>
-
-- Hydropower is a specialized form of energy production that provides an more advantageous setting for empirical work.
-
--->
 ---
 
 class: inverse, center, middle
@@ -295,10 +294,6 @@ class: inverse, center, middle
 <img src="pics/toy1a.png" height=350>
 </div>
 
-<!--
-<span style="color:#729dce"><b>Blue</b></span> 100% <span style="color:#729dce">($\uparrow$)</span> & 33% <span style="color:#729dce">($\downarrow$)</span> marketshare.
-<span style="color:#ff6665"><b>Red:</b></span> 67% <span style="color:#ff6665">($\uparrow$)</span> marketshare.
--->
 - <span style="color:#729dce"><b>Blue</b></span> 100% $(\uparrow)$ & 33% $(\downarrow)$ market share.
 - <span style="color:#ff6665"><b>Red:</b></span> 67% $(\uparrow)$ market share.
  
@@ -331,7 +326,7 @@ class: inverse, center, middle
 - Daily time series data for the 500 largest reservoirs in Norway (2000-2013).
   - Approximately 90% of the total system capacity.
   - Daily data from 2000 to 2013. (2 million obs.)
-  - Mat to other important covariates, such as plant specifications, producer, weather, GIS info, etc.
+  - Matched to other important covariates, such as plant specifications, producer, weather, GIS info, etc.
 - <span style="color:#BDBDBD">Electricity data over the same period.</span>
   - <span style="color:#BDBDBD">Prices and flows per bidding area. (Link.)</span>
   - <span style="color:#BDBDBD">Transmission constraints and boundary changes. (Link.)</span>
@@ -342,7 +337,7 @@ class: inverse, center, middle
 
 ## Hydro reservoirs 
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
+```{r reservoirs, echo=FALSE, message=FALSE, warning=FALSE}
 
 stations <- read_csv("../../hydro/data/stations.csv") 
 
@@ -355,12 +350,12 @@ stations <-
   mutate(mktshr = sum(maxvol, na.rm = T) / tot_vol * 100) %>% 
   ungroup()
 
-library(leaflet)
-library(maps)
+# library(leaflet)
+# library(maps)
 mapNorway <- map("world", "norway", fill = T, plot = F, encoding="UTF-8")
 
 ## Create colour palette for bidding area info
-library(RColorBrewer)
+# library(RColorBrewer)
 elspot_cols <- c(brewer.pal(6, "Accent")[c(3)],
                  brewer.pal(3, "Paired")[c(1)],
                  brewer.pal(6, "Accent")[c(5, 1, 6)])
@@ -414,35 +409,9 @@ name: data
 
 ## Elasticities (1)
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
-## Month order from Summer to Winter (useful for plots)
-month_ord <- 
-  c("May", "Jun", "Jul", "Aug", "Sep", "Oct",
-    "Nov", "Dec", "Jan", "Feb", "Mar", "Apr")
-
+```{r elasticities, echo=FALSE, message=FALSE, warning=FALSE}
 theme_results <-
-  theme(
-    axis.title.x = element_blank(),
-    text = element_text(family = font_type, size = font_size),
-    axis.text = element_text(family = font_type, size = ax_size),
-    plot.title = element_text(size = font_size),
-    plot.caption=element_text(margin = margin(t = 15),
-                              face = "italic", size = cap_size),
-    strip.background = element_rect(colour = "white", fill = "white")
-    )
-# theme_results <-
-#   hrbrthemes::theme_ipsum() +
-#   theme(
-#     axis.title.x = element_blank(),
-#     # axis.title = element_text(size = ax_size),
-#     # text = element_text(size = font_size),
-#     # axis.text = element_text(size = ax_size),
-#     # plot.title = element_text(size = font_size),
-#     plot.caption=element_text(margin = margin(t = 15),
-#                               face = "italic", size = cap_size)#,
-#     # strip.background = element_rect(colour = "white", fill = "white")
-#     )
-
+  theme(axis.title.x = element_blank())
 
 ## Elasticity regression results
 elast_coefs <- read_csv("../../hydro/results/elasticity-coefs.csv") 
@@ -453,11 +422,6 @@ elast_coefs %>%
   mutate(mnth = month(as.integer(gsub("mnth","",mnth)), label=T)) %>%
   mutate(mnth = fct_relevel(mnth, month_ord)) %>%
   ggplot(aes(x=mnth, y=estimate)) +
-  # geom_hline(
-  #   yintercept = elast_coefs %>% filter(grepl("mnth", term)) %>% pull(estimate) %>% median(), 
-  #   lty = 4, col = "grey60"
-  #   ) +
-  # geom_vline(xintercept = 6.5, lty = 4, col = "grey50") +
   geom_pointrange(aes(ymin = conf.low, ymax = conf.high)) +
   labs(y = expression(Predicted~epsilon[D])) +
   theme_results
@@ -467,7 +431,7 @@ elast_coefs %>%
 
 ## Elasticities (1)
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
+```{r elasticities_col, echo=FALSE, message=FALSE, warning=FALSE}
 elast_coefs %>%
   filter(grepl("mnth", term)) %>%
   rename(mnth = term) %>%
@@ -501,7 +465,7 @@ elast_coefs %>%
 
 ## Elasticities (2)
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
+```{r elasticities_q, echo=FALSE, message=FALSE, warning=FALSE}
 ## From elasticities to q and then Volumes
 q_vol <-
   elast_coefs %>%
@@ -547,7 +511,7 @@ q_vol %>%
 
 ## Elasticities (3)
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
+```{r elasticities_Q, echo=FALSE, message=FALSE, warning=FALSE}
 ## Volume (Q)
 q_vol %>%
   ggplot(aes(as.numeric(mnth))) +
@@ -632,7 +596,7 @@ https://collaboration133.com/how-to-scale-iframe-content-in-ie-chrome-firefox-an
 
 ## Layer 1: Transmission constraints
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
+```{r constraints_disb, echo=FALSE, message=FALSE, warning=FALSE}
 ## Read in previously created DF summarising daily capacity constraints by 
 ## bidding area 
 constrained <- read_csv("../../hydro/nordpool/data/nordpool-constrained.csv")
@@ -661,15 +625,9 @@ constrained %>%
     # caption = expression(italic("Note: Expressed as a percentage of total daily operating hours"))
     ) +
   facet_wrap(~impexp) +
-  # theme_bw() +
   theme(
     panel.grid.major = element_line(colour = "grey90", size = 0.5),
-    axis.title.x = element_blank(),
-    text = element_text(family = font_type, size = font_size),
-    axis.text = element_text(family = font_type, size = ax_size),
-    plot.title = element_text(size = font_size),
-    strip.background = element_rect(colour = "white", fill = "white"),
-    panel.spacing = unit(1, "lines") ## Increase gap between facet panels
+    axis.title.x = element_blank()
     )  
 ```
 
@@ -763,10 +721,6 @@ name:identification2
 .pull-left[
 **Regime 1: Binding**
 ![](pics/toy1a.png)
-<!--
-<span style="color:#729dce"><b>Blue</b></span> 100% <span style="color:#729dce">($\uparrow$)</span> & 33% <span style="color:#729dce">($\downarrow$)</span>.
-<span style="color:#ff6665"><b>Red:</b></span> 67% <span style="color:#ff6665">($\uparrow$)</span>
--->
 - <span style="color:#729dce"><b>Blue</b></span> 100% $(\uparrow)$ & 33% $(\downarrow)$
 - <span style="color:#ff6665"><b>Red:</b></span> 67% $(\uparrow)$
 ]
@@ -774,10 +728,6 @@ name:identification2
 .pull-right[
 **Regime 2: Binding**
 ![](pics/toy2a.png)
-<!--
-<span style="color:#729dce"><b>Blue:</b></span> 67% <span style="color:#729dce">$(\uparrow)$</span> & 50% <span style="color:#729dce">($\downarrow$)</span>
-<span style="color:#ff6665"><b>Red:</b></span> 33% <span style="color:#ff6665">($\downarrow$)</span> & 50% <span style="color:#ff6665">($\uparrow$)</span>
--->
 - <span style="color:#729dce"><b>Blue:</b></span> 67% $(\uparrow)$ & 50% $(\downarrow)$
 - <span style="color:#ff6665"><b>Red:</b></span> 33% $(\downarrow$) & 50% $(\uparrow)$
 ]
@@ -810,9 +760,6 @@ name:identification2
 
 
 $$\begin{aligned} \begin{split}	V_{it} = \sum_{m = 1}^{12}&{\beta_m M_{mt}} + \sum_{m = 1}^{12}{\gamma_m M_{mt} \cdot S_{it, f(it)}} + \\	&\sum_{f = 1}^{57}\psi_r{F_{ft}} + \sum_{r = 1}^{17}\delta_r{R_{rt}} + \sum_{z = 1}^{23}\eta_z{Z_{zt}} + \mathbf{X \beta_X} + a_i + v_{it}, \label{eq:reg2a} \end{split} \end{aligned}$$
-<!-- 
-$$V_{it} = \sum_{m = 1}^{12}{\beta_m M_{mt}} + \sum_{m = 1}^{12}{\gamma_m M_{mt} \cdot S_{it, f(it)}} + \sum_{r = 1}^{17}\delta_r{R_{rt}} + \sum_{z = 1}^{55}\eta_z{Z_{zt}} + \mathbf{X \beta_X} + a_i + v_{it}, \label{eq:reg2a}$$ 
--->
 <small>
 - $i$ reservoir
 - $f$ firm
@@ -837,11 +784,7 @@ $$V_{it} = \sum_{m = 1}^{12}{\beta_m M_{mt}} + \sum_{m = 1}^{12}{\gamma_m M_{mt}
 
 ## Regression equation (cont.)
 
-$$\begin{aligned} \begin{split}	V_{it} = \sum_{m = 1}^{12}&{\beta_m M_{mt}} + \sum_{m = 1}^{12}{{\color{red}\gamma_m} M_{mt} \cdot S_{it, f(it)}} + \\	&\sum_{f = 1}^{57}\psi_r{F_{ft}} \sum_{r = 1}^{17}\delta_r{R_{rt}} + \sum_{z = 1}^{23}\eta_z{Z_{zt}} + \mathbf{X \beta_X} + a_i + v_{it}, \label{eq:reg2b} \end{split} \end{aligned}$$
-<!-- 
-$$V_{it} = \sum_{m = 1}^{12}{\beta_m M_{mt}} + \sum_{m = 1}^{12}{{\color{red}\gamma_m} M_{mt} \cdot S_{it, f(it)}} + \sum_{r = 1}^{17}\delta_r{R_{rt}} + \sum_{z = 1}^{55}\eta_z{Z_{zt}} + \mathbf{X \beta_X} + a_i + v_{it}, \label{eq:reg2b}$$
--->
-
+$$\begin{aligned} \begin{split}	V_{it} = \sum_{m = 1}^{12}&{\beta_m M_{mt}} + \sum_{m = 1}^{12}{{\color{red}\gamma_m} M_{mt} \cdot S_{it, f(it)}} + \\ &\sum_{f = 1}^{57}\psi_r{F_{ft}} + \sum_{r = 1}^{17}\delta_r{R_{rt}} + \sum_{z = 1}^{23}\eta_z{Z_{zt}} + \mathbf{X \beta_X} + a_i + v_{it}, \label{eq:reg2b} \end{split} \end{aligned}$$
 - Primarily interested in the $\color{red}\gamma_m$ parameters on the interacted market share variable.
 - Based on theory and empirical demand elasticity estimates, expect the sign to vary by season:
   - $\gamma_m>0$ in summer
@@ -856,17 +799,7 @@ class: inverse, center, middle
 
 ## Effect of market share 
 
-```{r}
-library(ggplot2) 
-library(cowplot) 
-library(scales) 
-library(extrafont)
-
-# load("../Data/results.RData")
-library(lubridate)
-library(forcats)
-# library(DT)
-
+```{r model_1}
 reg_coefs <- 
   read_csv("../../hydro/results/est-coefs.csv") %>%
   mutate(model = paste0(model, " \n"))
@@ -897,7 +830,7 @@ reg_coefs %>%
 
 ## Effect of market share (cont.) 
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
+```{r model_2, echo=FALSE, message=FALSE, warning=FALSE}
 reg_coefs %>% 
   filter(model == "Model (2) \n") %>%
   filter(grepl("mktshr", term)) %>%
@@ -922,7 +855,7 @@ reg_coefs %>%
 
 ## Effect of market share (cont.) 
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
+```{r model_3, echo=FALSE, message=FALSE, warning=FALSE}
 reg_coefs %>% 
   filter(model == "Model (3) \n") %>%
   filter(grepl("mktshr", term)) %>%
@@ -947,7 +880,7 @@ reg_coefs %>%
 
 ## Effect of market share (cont.) 
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
+```{r model_4, echo=FALSE, message=FALSE, warning=FALSE}
 reg_coefs %>% 
   filter(model == "Model (4) \n") %>%
   filter(grepl("mktshr", term)) %>%
@@ -971,7 +904,7 @@ reg_coefs %>%
 
 ## Robustness checks (e.g.)
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
+```{r robustness, echo=FALSE, message=FALSE, warning=FALSE}
 reg_robustness_coefs %>% 
   filter(model == "Model (4a)") %>% 
   mutate(model = gsub("\\(4a\\)", "\\(4a\\) \\\n", model)) %>% 
@@ -1004,7 +937,7 @@ class: inverse, center, middle
 
 - I exploit quasi-experimental variation in market power among Norwegian electricity firms (source: transmission constraints).
 - Pair this variation with a unique dataset of Norwegian hydropower reservoirs and electricity flows.
-- Empirical results accord closely with the predictions of theory.
+- Empirical results closely match the predictions of theory.
 - Market power induces a modest, but definitive pattern of resource shifting.
     + 1% $\uparrow$ in local market share leads to 0.1 $-$ 0.3% $\uparrow$ $(\downarrow)$ in reservoir volumes during summer (winter).
 - **Policy relevance**
@@ -1206,45 +1139,10 @@ count: false
 
 ## Variation from regime changes
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
-# library(dplyr)
-# library(tidyr)
-# library(lubridate)
-# library(data.table)
-library(scales)
-
-#elspot_dates <- distinct(marketshares, elspot_date)$elspot_date
-
-reservoirs <- 
-  data.table::fread("../../hydro/data/reservoirs.csv", encoding = "UTF-8", showProgress = F) %>%
-  as_data_frame() %>% 
-  mutate(date = ymd(date))
-
+```{r mktshr_disb, echo=FALSE, message=FALSE, warning=FALSE}
 ## What is the distribution of changes to market share (i.e. by individal 
 ## stations/reservoirs)?
-mktshr_change <-
-  reservoirs %>% 
-  group_by(id, reservoir_id, producer, regime, mktshr) %>% 
-  distinct() %>%
-  arrange(id, regime) %>%
-  group_by(id, reservoir_id) %>%
-  mutate(change_mktshr = mktshr - lag(mktshr)) %>% 
-  filter(!is.na(change_mktshr)) %>%
-  mutate(change_mktshr = round(change_mktshr, 1)) %>%
-  group_by(producer, change_mktshr) %>%
-  summarise(n_stations = n()) %>%
-  arrange(producer, change_mktshr) 
-
-# mktshr_change %>%
-#   group_by(change_mktshr) %>%
-#   summarise(n_stations = sum(n_stations)) %>%
-#   ggplot(aes(change_mktshr/100, weight = n_stations)) +
-#   geom_histogram(bins = 50) +
-#   scale_x_continuous(breaks = seq(-.3,.4, by = .1), labels = scales::percent) +
-#   scale_y_continuous(labels = scales::comma) +
-#   labs(x = "Change in market share", y = "No. of occurences") +
-#   theme(text = element_text(family = font_type)) 
-
+mktshr_change <- read_csv("../../hydro/data/marketshares-change.csv")
 mktshr_change %>%
   filter(change_mktshr < -.5 | change_mktshr > .5) %>%
   filter(change_mktshr != 0) %>%
@@ -1267,12 +1165,6 @@ mktshr_change %>%
         plot.caption=element_text(margin = margin(t = 15),
                                   face = "italic")
         )
-  # theme(text = element_text(family = font_type, size = font_size),
-  #       axis.text = element_text(family = font_type, size = ax_size),
-  #       plot.title = element_text(size = font_size),
-  #       plot.caption=element_text(margin = margin(t = 15),
-  #                                 face = "italic", size = cap_size)
-  #       )
 
 ```
 .right[[Go back](#identification2).]
